css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html,
body {
    height: 100%;
    margin: 5%;
    font-family: 'Titillium Web', sans-serif;
}

h1,h2,h3,h4,h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Copy and paste your work from yesterday here and start to refactor into flexbox */
body {
    
    padding: 3%;
}

.container {
    margin: 1%;
    
    display: flex;
    flex-direction: row-reverse;
    align-items: flex-end;
    width: 100%; 

 }   
.great {
    display: flex; 
    margin: 2%;
  
}
.nav {
    display: flex;
   
}
 .nav a {
    
    padding: 4.3%;
    text-decoration: none;
    color: gray;
    font-size: 20px; 
     
}
/* logo for header */
.great .logo {
    display: flex;
    left: 83%;
    top: 0;
    margin: 20px;
}
.top-images {
    display: flex;
    /* justify-content: space-evenly; */
    
}
/* innovation on demand logo */
.Iod {
    display: flex;
    padding-top: 15%;
    padding-right: 5%;
    text-align: center;
    font-size: 80px;
   

}

.Iod .button {
    border: 1px solid;
    margin-left: 1%;
    border-radius: 2px;
    width: 42%;
    height: 10%;
    font-size: 22px;
}

/*  */

/*features that wrap around middle picture*/
.content {
    /* margin: 1%; */
    border-top: 1px solid gray;
    margin-top: 5%;
    display: flex;
    height: 50%;
    width: 100%;   
}

.About {

    width: 49%;
    margin: 2.5%; 
    font-size: 35px;
    height: 65%;
}

.Features {
    width: 49%;
    margin: 2.5%;
    font-size: 35px;
    height: 65%;
}
/* bottom text with 3 columns */

.spv {
    display: flex; 
    width: 100%;   
    border-bottom: 2px solid gray;
    border-top: 4%;   
}
.Services {
    
    width: 30%;
    margin: 1%;
    font-size: 25px;

}

.Product {
    
    width: 31%;
    margin: 1%;
    font-size: 25px;
}

.Vision {
  
    width: 32%;
    margin: 1%;
    font-size: 25px;
  
}

.img-container {
    display: flex;
}

/*across page computer screen image*/
.middle-img {
    width: 100%;
    margin: 1%; 
      
}

/*this is where bottom 
section of page starts*/


.footer {
    margin: 1%;
    
}

address {
    text-align: justify;
    padding: 25px;
    font-size: 30px;
}

.copyright {
    text-align: center;
    padding: 25px;
    font-size: 20px;
    margin-bottom: 30px;
}

.contact {
    margin: 2%;
    font-size: 25px
}

/*---------SERVICES PAGE----------------      start of second page*/

.container1 {
   
    width: 100%;  
    margin: 1%;
}
.great {
    
}
.great .logo {
    
    l
    
}  
.top {
    display: flex;
    
    width: 100%;
    border: 1px solid blue;
}
header .navtext a {
   
    border: 1px solid red;
    text-align: center;
    padding: 1%;
    text-decoration: none;
    color: gray;
    font-size: 25px;
}
/* top image */
.container .serv-img {
    width: 90%;  
    margin: 3%;
    padding: 2%; 

}

.serv {
    display: flex;
    width: 96%;


}

.servtext {
    padding-top: 5%;
    padding-bottom: 5%;
    height: 30%;
    font-size: 30px;
    

}

.content2 {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    padding: 2%;    
    height: 1125px;
    border: 1px solid gray;
}

.group1 {
    border: 2px solid gray;
    height: 300px;
    width: 45%;
    font-size: 25px;
    padding: 15px;
    margin-bottom: 25px;
    background-color: #E0E0E0;

}

.group2 {
    border: 2px solid gray;
    padding: 15px;
    height: 300px;
    width: 45%;
    font-size: 25px;
    margin-top: 25px;
    margin-bottom: 25px;
    background-color: #E0E0E0;
}

.group3 {
    border: 2px solid gray;
    padding: 15px;
    height: 300px;
    width: 45%;
    font-size: 25px;
    margin-top: 25px;
    margin-bottom: 50px;
    background-color: #E0E0E0;
}

.btn {
    width: 200px;
    height: 50px;
    margin: 15px;
    padding: 15px;
    border-radius: 7px;
}

.textpicbottom {
    display: flex;
    border-top: 2px solid black;
    width: 90%;
    margin-left: 75px;
    justify-content: space-between;

}

.aboutfact {
    border: 1 px solid gray;
    /*margin-left: 70px;*/
    padding: 20px;
    width: 45%;
    font-size: 25px;
    margin-top: 20px;
}
.services-info-img {
    
    width: 47%;
    height: 420px;
    margin-top: 50px;

}

.cc {
    text-align: center;
}

li {
    margin-top: 20px;
}
hr {
    width: 87%;
    margin-left: 90px;
}
/* MEDIA QUERIES  */
@media (max-width: 800px) {

    .circle {
        display: none;
    }
    .nav {
        width: 100%;
        font-size: 15px;

    }
    .nav a {
        justify-content: space-between;
        padding: 4%;

    }
   .container {
        flex-direction: column;
        
        align-items: center;
    }
    .top-images {
        justify-content: center;
    }
    .Iod {
        margin-bottom: 7%;
        justify-content: center;
    }
    .content {
        margin: 1%;
        border-top: 1px solid gray;
        display: flex;
        height: 20%;
        width: 100%; 
    }
    .About {
        padding: 1%;
        width: 48%; 
        font-size: 18px;
        height: 20%;
    }
    
    .Features {
        width: 49%;   
        font-size: 18px;
        height: 20%;
        padding: 1%;
    }
    .spv {
        height: 24%;
    }
    .Services {
        font-size: 15px;
           
    }
    
    .Product {
        font-size: 15px;
    }
    
    .Vision {
        font-size: 15px;     
    }
    address {

        font-size: 15px;
    }
    
    .copyright {
        font-size: 10px;
    

    }
    
    .contact {
        font-size: 15px
    }
    
}
@media (max-width: 500px) {
    body {
        margin: 0%;        
        height: 100%;
    }
    .container {
        margin: 0%;
        margin-bottom: 0%; 
          
    }
    .nav {
   
        flex-direction: column;
        align-items: center;
        
        width: 120%;
    }
    .nav a {
        
        text-align: center;
        border: 1px solid gray;
        width: 100%;
        /* margin: 2%; */
    }

    .About {
        width: 100%;
        display: inline-block;
        font-size: 13px;
        height: 10%;
    }
    
    .Features {
        display: inline-block;
        width: 100%;
        font-size: 13px;
        height: 10%;
      
    }
    .content {
        display: inline-block;
        height: 20%;

    }
    .spv {
        display: inline-block;
        height: 29%;
    }
    .Services {
        font-size: 13px;
        width: 100%;   
    }
    
    .Product {
        font-size: 13px;
        width: 100%;
    }
    
    .Vision {
        font-size: 13px; 
        width: 100%;    
    }
    address {

        font-size: 13px;
    }
    
    .copyright {
        font-size: 10px;
    

    }
    
    .contact {
        font-size: 15px
    }

}

